--- a/src/app/modules/product/forms/forms.component.html
+++ b/src/app/modules/product/forms/forms.component.html
@@ -3,35 +3,37 @@
 <div mat-dialog-content>
   <form [formGroup]="frm">
     <mat-form-field>
-      <input matInput placeholder="First name" formControlName="first_name" class="person-input">
-      <mat-hint align="end">{{frm.controls.first_name.value?.length || 0}}/10</mat-hint>
-      <mat-error *ngIf="frm.controls.first_name.invalid">{{getNameErrorMessage()}}</mat-error>
+      <input matInput placeholder="Code" formControlName="code" class="person-input">
+      <mat-error *ngIf="frm.controls.code.invalid">{{getCodeErrorMessage()}}</mat-error>
     </mat-form-field>
 
     <br />
 
     <mat-form-field>
-      <input matInput placeholder="Last name" formControlName="last_name" class="person-input">
-      <mat-hint align="end">{{frm.controls.last_name.value?.length || 0}}/10</mat-hint>
-      <mat-error *ngIf="frm.controls.last_name.invalid">{{getLastNameErrorMessage()}}</mat-error>
+      <input matInput placeholder="Name" formControlName="name" class="person-input">
+      <mat-error *ngIf="frm.controls.name.invalid">{{getNameErrorMessage()}}</mat-error>
     </mat-form-field>
 
     <br />
 
     <mat-form-field>
-      <input matInput type="number" placeholder="Age" formControlName='age'>
-      <mat-hint align="end">{{frm.controls.age.value?.length || 0}}/10</mat-hint>
-      <mat-error *ngIf="frm.controls.age.invalid">{{getAgeErrorMessage()}}</mat-error>
+      <input matInput placeholder="Description" formControlName="description" class="person-input">
+      <mat-error *ngIf="frm.controls.description.invalid">{{getDescriptionErrorMessage()}}</mat-error>
     </mat-form-field>
 
     <br />
 
-    <mat-radio-group formControlName='gender' color="primary">
-      <label>Gender: </label> <br /><br />
-      <mat-radio-button value="Female">Female</mat-radio-button>
-      <mat-radio-button value="Male">Male</mat-radio-button>
-      <mat-error *ngIf="frm.controls.gender.invalid">{{getGenderErrorMessage()}}</mat-error>
-    </mat-radio-group>
+    <mat-form-field>
+      <input matInput placeholder="Reference" formControlName="reference" class="person-input">
+      <mat-error *ngIf="frm.controls.reference.invalid">{{getReferenceErrorMessage()}}</mat-error>
+    </mat-form-field>
+
+    <br />
+
+    <mat-form-field>
+      <input matInput placeholder="Location Storage" formControlName="locationStorage" class="person-input">
+      <mat-error *ngIf="frm.controls.locationStorage.invalid">{{getLocationStorageErrorMessage()}}</mat-error>
+    </mat-form-field>
 
     <mat-form-field style="visibility: hidden; height: 0vh !important">
       <input matInput type="text" formControlName='id'>
@@ -40,9 +42,8 @@
 </div>
 
 <div mat-dialog-actions align="end">
-  <button mat-button [mat-dialog-close]>Cancelar</button>
+  <button mat-button [mat-dialog-close]>Cancel</button>
   <button mat-raised-button color="primary" (click)='save(frm)' class="btnSave" [disabled]="!frm.valid">
-    <mat-icon aria-label="icon-button">save </mat-icon>
     <span>Save</span>
   </button>
 </div>
